# katana-file-converter

./: .gitignore  Katana.bat  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
assets/: generate_showcase.py
katana/: __init__.py  __main__.py  cli.py  i18n.py  preview.py  themes.py  ui.py
katana/converters/: __init__.py  av.py  base.py  chain.py  data.py  documents.py  icons.py  image_extra.py  ocr.py  options.py  spreadsheet.py  text.py  tooling.py
katana/core/: config.py  history.py  naming.py  settings.py
katana/integrations/: completion.py  windows_menu.py
katana/tools/: archive.py  pdf_tools.py  watch.py
tests/: test_katana.py
